deployment/cody-frontend.yaml
@"
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cody-frontend
  namespace: cody-apps
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      topologySpreadConstraints:
      - maxSkew: 1
        topologyKey: kubernetes.io/hostname
        whenUnsatisfiable: ScheduleAnyway
        labelSelector:
          matchLabels:
            app: frontend
      containers:
      - name: nginx-frontend
        image: $ACRServer/cody-frontend:v1
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 50m
            memory: 64Mi
          limits:
            cpu: 200m
            memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  namespace: cody-apps
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
  - port: 80
    targetPort: 80
"@ | Out-File -Encoding UTF8 cody-frontend.yaml
