deployment/secure-backend.yaml
@"
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-except-frontend-to-backend
  namespace: cody-apps
spec:
  # Áp dụng luật này cho Backend Pod
  podSelector:
    matchLabels:
      app: cody-backend
  # Kiểm soát chiều vào (Ingress)
  policyTypes:
  - Ingress
  # Whitelist
  ingress:
  - from:
    # CHỈ CHO PHÉP Pod có nhãn là frontend
    - podSelector:
        matchLabels:
          app: cody-frontend
"@ | Out-File -Encoding UTF8 secure-backend.yaml
